--- a/index.html
+++ b/index.html
@@ -1,25 +1,105 @@
 <html>
 <head>
-	<title>Three.js</title>
-	<script src="js/three.js"></script>
-	<script src="js/OrbitControls.js"></script>
-	<script src="node_modules/dat.gui/build/dat.gui.module.js"></script>
+    <title>Three.js</title>
+    <script src="js/three.js"></script>
+    <script src="js/OrbitControls.js"></script>
+    <script src="node_modules/dat.gui/build/dat.gui.module.js"></script>
 </head>
 <body>
 
-<p style="position: fixed;color: azure; top: 100px; left: 10px; font-size:40px";>block size:</p> <input type="range" value="2.5" min="0" max="10" id="size" oninput="sizeBlock()"  style="position: fixed; top: 200px; left: 10px; ">
-<p style="position: fixed;color: azure; top: 300px; left: 10px; font-size:40px";>number of blocks</p> <input type="range" value="10" min="0" max="10" id="number" oninput="numberOfBlock()"  style="position: fixed; top: 400px; left: 10px; ">
+<p style="position: fixed;color: azure; top: 100px; left: 10px; font-size:40px" ;>block size:</p> <input type="range"
+                                                                                                         value="2.5"
+                                                                                                         min="0"
+                                                                                                         max="10"
+                                                                                                         id="size"
+                                                                                                         oninput="sizeBlock()"
+                                                                                                         style="position: fixed; top: 200px; left: 10px; ">
+<p style="position: fixed;color: azure; top: 300px; left: 10px; font-size:40px" ;>number of blocks</p> <input
+        type="range" value="10" min="0" max="10" id="number" oninput="numberOfBlock()"
+        style="position: fixed; top: 400px; left: 10px; ">
 <script>
-	function sizeBlock() {
-		let sizes = document.getElementById("size").value;
-		return sizes
-	}
-	function numberOfBlock() {
-		let num = document.getElementById("number").value;
-		return num
-	}
+    function sizeBlock() {
+        let sizes = document.getElementById("size").value;
+        console.log(sizes)
+        return sizes
+    }
+
+    function numberOfBlock() {
+        let num = document.getElementById("number").value;
+        return num
+    }
+
+    var scene, renderer, camera;
+    var cube;
+    var controls;
+
+    init();
+
+    function init() {
+        renderer = new THREE.WebGLRenderer({antialias: true});
+        var width = window.innerWidth;
+        var height = window.innerHeight;
+        renderer.setSize(width, height);
+        document.body.appendChild(renderer.domElement);
+        scene = new THREE.Scene();
+        let coubeWidth = document.getElementById("size").value;
+        var cubeGeometry = new THREE.BoxGeometry(coubeWidth, coubeWidth, coubeWidth);
+        let firstLine = document.getElementById("number").value;
+
+        function makeCoubs(cubeGeometry, color, y, x) {
+            let cubeMaterial = new THREE.MeshBasicMaterial({color});
+            let cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
+            scene.add(cube);
+            cube.position.y = y;
+            cube.position.x = x;
+            return cube;
+        }
+
+        function makeColor() {
+            var c = '';
+            while (c.length < 6) {
+                c += (Math.random()).toString(16).substr(-6).substr(-1)
+            }
+            return '#' + c;
+        }
+
+        let y = coubeWidth / 2
+        let count = 0;
+        let count2 = 0;
+        for (let k = 0; k < firstLine; k++) {
+            if (k % 2 == 0) {
+                for (let i = 0; i < firstLine - k; i++) {
+                    makeCoubs(cubeGeometry, makeColor(), y + k * coubeWidth, (i * 1.5 * coubeWidth) + count * 1.5 * coubeWidth);
+                }
+                count++;
+            } else {
+                for (let i = 0; i < firstLine - k; i++) {
+                    makeCoubs(cubeGeometry, makeColor(), y + k * coubeWidth, (i * 1.5 * coubeWidth + coubeWidth * 0.75) + count2 * 1.5 * coubeWidth);
+                }
+                count2++;
+            }
+        }
+        camera = new THREE.PerspectiveCamera(45, width / height, 1, 10000);
+        camera.position.y = 160;
+        camera.position.z = 400;
+        camera.lookAt(new THREE.Vector3(0, 0, 0));
+
+        controls = new THREE.OrbitControls(camera, renderer.domElement);
+
+        var gridXZ = new THREE.GridHelper(100, 10);
+        gridXZ.setColors(new THREE.Color(0xff0000), new THREE.Color(0xffffff));
+        scene.add(gridXZ);
+
+    }
+
+    function animate() {
+        controls.update();
+        requestAnimationFrame(animate);
+        renderer.render(scene, camera);
+
+    }
+animate();
 </script>
-<script src="js/scene.js"></script>
 
 </body>
 </html>
